Working on mobile version layout issues.

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-
-
-@media(min-width: 900px){
 * {
   box-sizing: border-box; 
 }
@@ -37,21 +34,21 @@ body {
   display: grid;
   grid-template-columns: auto auto auto;
   background-color: #8A2BE2;
-  padding: 5px;
-  gap: 5px;  
+  padding: 3px;
+  gap: 1px;  
 }
 .box div {
   background-color: #f1f1f1;
   color: #000;
-  padding: 5px;
-  font-size: 30px;
+  padding: 3px;
 
 }
 .product-description {
   margin-bottom: 5px;
   grid-column: 1 / span 4;
   grid-row: 2;
-  width: 1000px;
+  font-size: 12px;
+  width: 100%;
 }
 .pricing {
   margin-bottom: 5px;
@@ -60,44 +57,46 @@ body {
 
 }
 .pricing p {
-  font-size: 24px;
+  font-size: 32px;
   font-weight: bold;
-  text-align: right;
+  text-align: center;
   color:#8A2BE2;
 }
 
 .calendly {
-  grid-column: 4;
-  grid-row: 3;
+  grid-column: 1;
+  grid-row: 3 / span 4;
   padding-bottom: 5px;
   padding-left: 0%;
+  align-items: center;
 }
 
 .product-name {
-  grid-column: 2 / span 2;
+  grid-column: 1 / span 2;
   grid-row: 1;
-  font-size: 36px;
+  font-size: 32px;
   font-weight: bold;
+  text-align: center;
 }
 .flexbox {
   display: flex;
   background-color: #8A2BE2;
   flex-direction: column;
-  padding: 5px;
+  padding: 3px;
 }
 
 .flexbox div {
   background-color: #f1f1f1;
-  margin: 5px;
-  padding: 5px;
-  font-size: 24px;
+  margin: 3px;
+  padding: 3px;
+  font-size: 12px;
 }
 
 .header {
   background-color: none;
-  padding: 10px;
+  padding: 5px;
   text-align: center;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: bold;
   color: #8A2BE2;
   border: 3px solid #fff8dc;
@@ -113,7 +112,7 @@ body {
   border-color: #32cd32;
   border-width: 3px;
   box-shadow: rgba(255, 255, 255, 0.26) 0 1px 2px inset;
-  box-sizing: border-box;
+  width:200px;
   color: #32cd32;
   cursor: pointer;
   display: flex;
@@ -141,6 +140,93 @@ body {
   border-color: #fff8dc;
   border-width: 3px;
   color: #fff8dc;
+}
+
+@media(min-width: 900px){
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+}
+
+/* Style the topnav links */
+.topnav a {
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change color on hover */
+
+.box {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 5px;
+  gap: 5px;  
+}
+.box div {
+  background-color: #f1f1f1;
+
+  padding: 5px;
+  font-size: 30px;
+
+}
+.product-description {
+  margin-bottom: 5px;
+  grid-column: 1 / span 4;
+  grid-row: 2;
+  width: 1000px;
+}
+.pricing {
+  margin-bottom: 5px;
+  grid-column: 4;
+  grid-row: 1;
+
+}
+.pricing p {
+  font-size: 24px;
+  font-weight: bold;
+  text-align: right;
+}
+
+.calendly {
+  grid-column: 4;
+  grid-row: 3;
+  padding-bottom: 5px;
+  padding-left: 0%;
+}
+
+.product-name {
+  grid-column: 2 / span 2;
+  grid-row: 1;
+  font-size: 36px;
+  font-weight: bold;
+}
+.flexbox {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
+
+.flexbox div {
+  margin: 5px;
+  padding: 5px;
+  font-size: 24px;
+}
+
+.header {
+  padding: 10px;
+  font-size: 24px;
 }
 
 }
